--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,61 @@
-body{
-    background-color: black;
+h1 {
+  margin: 1rem;
 }
-h1{
-    color: white;
+
+.card {
+  margin: 2rem;
+}
+
+#producto-contenedor {
+  display: grid;
+  margin: 90px auto;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+/* Modal */
+.modal-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  background-color: transparent;
+  width: 100%;
+  height: 100vh;
+  visibility: hidden;
+  transition: opacity 0.3s ease;
+  border-radius: 10px;
+  z-index: 100;
+}
+
+/* Hacer visible el modal  */
+.modal-active {
+  opacity: 1;
+  visibility: visible;
+  z-index: 5;
+}
+
+.modal-carrito {
+  width: 30rem;
+  height: auto;
+  background-color: #DDDDDD;
+  padding: 1rem;
+  border-radius: 10px;
+}
+
+/* Cada Producto en Carrito */
+.productoEnCarrito {
+  border-left: 5px solid blue;
+  border-bottom-left-radius: 3px;
+  border-top-left-radius: 3px;
+  margin: 5px 0;
+  padding: 5px 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.boton-eliminar {
+  background-color: transparent;
+  border: none;
 }
