--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,15 @@ h1 {
   margin: 2rem;
 }
 
+body{
+  background-color: #bbbbbb;
+}
+
+.btn .btn-primary{
+  background-color: purple;
+  color: purple;
+}
+
 #producto-contenedor {
   display: grid;
   margin: 90px auto;
@@ -14,48 +23,61 @@ h1 {
   flex-wrap: wrap;
 }
 
-/* Modal */
-.modal-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.modal-contenedor {
   position: fixed;
-  background-color: transparent;
+  top: 0;
   width: 100%;
   height: 100vh;
+  background-color: #00000077;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
   visibility: hidden;
-  transition: opacity 0.3s ease;
-  border-radius: 10px;
-  z-index: 100;
 }
 
-/* Hacer visible el modal  */
 .modal-active {
   opacity: 1;
   visibility: visible;
-  z-index: 5;
 }
 
 .modal-carrito {
-  width: 30rem;
-  height: auto;
-  background-color: #DDDDDD;
-  padding: 1rem;
-  border-radius: 10px;
+  position: relative;
+  background-color: white;
+  min-width: 500px;
+  padding: 20px;
+  margin-top: -100%;
+  transition: all .5s;
 }
 
-/* Cada Producto en Carrito */
+.modal-active .modal-carrito {
+  margin-top: 0;
+}
+
+.modal-carrito #carritoCerrar {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  font-size: 20px;
+  color: purple;
+  border: none;
+  background-color: white;
+}
+
 .productoEnCarrito {
-  border-left: 5px solid blue;
-  border-bottom-left-radius: 3px;
-  border-top-left-radius: 3px;
-  margin: 5px 0;
-  padding: 5px 10px;
+  border-left: 1rem solid purple;
+  border-bottom-left-radius: 1rem;
+  border-top-left-radius: 1rem;
+  margin: 0.5rem;
+  padding: 0.5rem;
   display: flex;
   justify-content: space-between;
 }
 
 .boton-eliminar {
-  background-color: transparent;
+  background-color: #FF000099;
+  color: white;
   border: none;
+  border-radius: 1rem;
+  font-size: 20px;
 }
